<package>

    <name>rslidar</name>
    <version>1.0.1</version>
    <description>
        Basic ROS support for the Robosense 3D LIDARs.
    </description>
    <maintainer email="abrahammonrroy@yahoo.com">Abraham Monrroy</maintainer>
    <author email="tony.zhang@robosense.cn">Tony Zhang</author>
    <author>Tony Zhang</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>rslidar_driver</run_depend>
    <run_depend>rslidar_msgs</run_depend>
    <run_depend>rslidar_pointcloud</run_depend>

    <export>
        <metapackage/>
    </export>

</package>
