<?xml version="1.0"?>
<package>
  <name>rslidar_driver</name>
  <version>1.0.0</version>
  <description>segmentation</description>

  <maintainer email="tony.zhang@robosense.cn">Tony</maintainer>
  <author>Tony Zhang</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rslidar_input</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>rslidar_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>


  <run_depend>angles</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <!-- <run_depend>python-yaml</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <!-- <run_depend>yaml-cpp</run_depend> -->
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rslidar_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_rslidar.xml"/>
  </export>

</package>
